--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -14,7 +14,7 @@ is easily suitable for longitudinal analysis. But most demographic datasets are
 \emph{region-based}, where the measurements are associated with pre-defined
 regions, not only for an additional level of privacy protection, but because
 some measurements only make sense over a defined area. Census data is a classic
-example of this format, with datasets available from 1790 onwards for the
+example of this format, with datasets available from 1790 onward for the
 US~\cite{nhgis}. Despite this unmatched temporal availability, longitudinal
 analyses of census data are often restricted in time, especially when smaller
 tabulation areas are considered, such as census tracts (CT) or dissemination
@@ -26,9 +26,9 @@ approach is no longer viable.
 However, these analyses are necessary to understand the urban environment.
 Indeed, two different regions can have similar average income for a given year,
 while one is experiencing a process of economic improvement and the other one
-impoverishment. Quite obviously, a single snapshot cannot be used to identify
-gentrification, migration, education changes, or any of the relevant processes
-that happen over time.
+impoverishment. A single snapshot cannot be used to identify gentrification,
+migration, education changes, or any of the relevant processes that happen over
+time.
 
 
 To overcome these inconsistencies, the traditional approach is the
@@ -51,7 +51,7 @@ tract-by-tract comparison, the identification and visualization of patterns of
 demographic evolution without geographic harmonization, effectively removing one
 of the most challenging problems in longitudinal demographic analysis. We also
 include illustrative scenarios and our prototype is available at
-\url{http://uoft.me/piccard}, including more than fourty regions in the US and
+\url{http://uoft.me/piccard}, including more than forty regions in the US and
 Canada. The source code is publicly available at
 \url{https://github.com/fabioasdias/piccard}.
 
