--- a/paper/main.tex
+++ b/paper/main.tex
@@ -287,17 +287,19 @@ E-mail: dsilver@utsc.utoronto.ca
 % in the abstract or keywords.
 \IEEEtitleabstractindextext{%
 \begin{abstract}
-  We propose a visual analytics system that enables the exploration
-  evolutionary patterns in geographically inconsistent data, removing the need to
-  harmonize it into the same geographical regions, a time consuming and
-  error-prone process that is currently used in virtually all longitudinal
-  analysis of geographical data. This work also includes incremental developments
-  in the representation, clustering, and visual exploration of geographical data.
-  We illustrate it considering census data, where it allows an easier
-  understanding of the demographic groups present in a city and their evolution
-  over time. We present the feedback of experts in urban sciences and sociology,
-  along with illustrative scenarios in the USA and Canada on the decennial
-  censuses between 1970 and 2010.
+  We propose a visual analytics system that enables the exploration evolutionary
+  patterns in geographically inconsistent data, removing the need for
+  harmonization of the geographical regions into a common geometry, a time
+  consuming and error-prone process that is currently used in virtually all
+  longitudinal analysis of geographical data. This work also includes
+  incremental developments in the representation, clustering, and visual
+  exploration of region-based geographical data. While we leverage the well
+  known context of census data, our proposal is suitable for any region-based
+  data. The method enables an easier identification and understanding of the
+  demographic groups present in a city and their evolution over time. We present
+  the feedback of experts in urban sciences and sociology, along with
+  illustrative scenarios in the USA and Canada on the decennial censuses between
+  1970 and 2010.
 \end{abstract}
 
 % Note that keywords are not normally used for peerreview papers.
@@ -417,7 +419,11 @@ interpolated to 2010 boundaries (...)"}~\cite{Dmowska2017}
 
 
 This research was supported by a University of Toronto Connaught Global
-Challenge grant and is part of the Urban Genome Project.
+Challenge grant and is part of the Urban Genome Project. The authors thank Cary
+Wu, Ethan A. Fosse, Fernando Calderón Figueroa, Patrick Adler, and James Murdoch
+for their expert opinions; Mark S. Fox, Robert M. Wright, Ultan Byrne, Matti
+Siemiatycki, Shauna Brail, and Richard Florida for general guidance and support;
+and the anonymous reviewers for their constructive comments.
 
 
 
