--- a/sup/sup.tex
+++ b/sup/sup.tex
@@ -50,6 +50,7 @@
 
 \section{Expert comments}
 
+
 \subsection{Original request}
 As part of our efforts in the Urban Genome Project of the University of Toronto,
 we are trying to build infrastructure to help understand recurrent and
@@ -105,9 +106,8 @@ feedback is welcome.
 
 
 \subsection{A - Cary Wu}
-\href{https://soci.ubc.ca/persons/cary-wu/}{\url{https://soci.ubc.ca/persons/cary-wu/}}
-% \subsection{Expert A}
-\emph{Doctoral candidate in Sociology, UBC.}
+%\href{https://soci.ubc.ca/persons/cary-wu/}{\url{https://soci.ubc.ca/persons/cary-wu/}}
+\emph{Doctoral candidate in Sociology at the University of British Columbia, Canada.}
 
 \question{Does this prototype make the exploration of census data easier?}
  
@@ -156,8 +156,7 @@ visualize the U.S. General Social Survey across different states from 1972-2016.
 
 \subsection{B - Ethan A. Fosse}
 % \href{https://scholar.harvard.edu/ethanfosse}{\url{https://scholar.harvard.edu/ethanfosse}}
-% \subsection{Expert B}
-\emph{Research Associate in  Sociology, Harvard}
+\emph{Research Associate at Princeton University, USA}
 
 Very cool visualization tool! To answer your questions:
 
@@ -194,7 +193,7 @@ prominent place. Typically I think of the "Gear" icon as representing more
 technical options, but the first change I made was altering the location.
 
 \subsection{C - Fernando Calderón Figueroa}
-\emph{Sociology Department, University of Toronto}
+\emph{Doctoral candidate in Sociology at the University of Toronto, Canada}
 
 
 \textbf{Overall assessment}
@@ -297,8 +296,8 @@ range of metros.
 
 
 
-\subsection{E - James Murdoch}%, 
-\emph{Policy Analyst, 2M Research}
+\subsection{E - James Murdoch}
+\emph{Policy Analyst at 2M Research, USA}
 
 Wow!! This is quite an undertaking and I definitely see the potential of this
 tool for understanding neighborhood dynamics overtime. Here are some uses I see
