--- a/paper/study.tex
+++ b/paper/study.tex
@@ -269,8 +269,10 @@ of all the regions accessible in this prototype.
 \section{Expert feedback}
 %This could be a big step toward better understanding of evolving urban morphology.
 To assess the proposed method, we contacted academic and industry experts in
-sociology and urban sciences. The supplementary material contains the
-communication with five experts, verbatim, identified from A to E. 
+sociology and urban sciences. We focused our inquires on the utility of the
+prototype, and if they found anything interesting on the data using it. The
+supplementary material contains the communication with five experts, verbatim,
+identified from A to E. 
 
 
 Their overall response was positive,  mentioning that the prototype allows them
@@ -289,19 +291,19 @@ analytics of evolving demographic data.
 
 
 
-While the interface was "easy to navigate" (B), it was also considered
+The interface was "easy to navigate" (B), but it was also considered
 "overwhelming" (A), "intimidating" (E), and "tricky to interpret" (C), possible
 side-effects of our effort to increase  representational accuracy, where we
 avoided using simplified representation or labels. Identifying clusters by their
 most relevant variables was welcome, but the overlap of information from
-different clusters in the boxplot was "a bit confusing" (C) when color is not
+different clusters in the boxplot was "a bit confusing" (C) when color was not
 present. Further, most clusters can be sufficiently characterized using only the
 most relevant aspect, but this is not generally true. 
 
 
 While the map of trajectories was mentioned as a "good summary map", how it
-related to the clustering method was unclear (C). While we provide different
-options on how the colors are used, both are sub optimal since reliably
+related to the clustering method was unclear (C). The methos includes different
+options on how the colors are used, but both are sub optimal since reliably
 representing several distinct entities using colors is humanly unfeasible.
 Indeed, the number of distinguishable colors was a significant constraint, we
 found indications that more clusters should be used in some cases, even if eight
@@ -314,23 +316,19 @@ The experts also mentioned the poor responsiveness of the method when changes in
 the clustering parameters required server-side processing (B,D). Indeed, the
 current implementation can take a few minutes to cluster regions with high
 number of CTs, like Los Angeles or Brooklyn. Server-processing reduced the
-amount of data transfered to client, but might increase response time under
-load. We implemented a cache policy that greatly reduces the response time, but
-fully pre-processing the results is not practical due to size of the parameter
-space.
+amount of data transfered to client, but it might increase the response time
+under load. We implemented a cache policy that greatly improved the performance,
+but fully pre-processing the results is not practical due to size of the
+parameter space.
 
 Most of the experts demonstrated interest in using our method in their research
 (A, B, D, E), aiming to use the census data as a backdrop for other datasets,
 providing demographic context. They also mentioned the need to export subsets of
-data, plots, and maps to be used in reports and publications (C, D, E).
-
-
-More importantly, while these experts were aware that our method does not
-perform geographic normalization, none of them mention it. We did not
-specifically ask if this difference led to unexpected results, but rather
-inquired if they found interesting insights, leading them to consider the
-interface, its options, and results as a whole. Most experts found phenomena
-corroborated by the specialized literature, indicating that our methodology
-produces equivalent results, with a fraction of the effort. We interpret the
-fact that most of them were interested in the next steps as an affirmation of
-the accuracy of the method.
+data, plots, and maps to be used in reports and publications (C, D, E). More
+importantly, while these experts were aware that our method does not perform
+geographic harmonization, none of them mention it. We did not specifically ask
+if this difference led to unexpected results, but rather if they found
+interesting insights. Most experts found phenomena corroborated by the
+specialized literature, indicating that our methodology produces equivalent
+results, with a fraction of the effort. We interpret the fact that most of them
+were interested in the next steps as confirmation of the accuracy of the method.
