--- a/paper/main.tex
+++ b/paper/main.tex
@@ -362,24 +362,14 @@ E-mail: dsilver@utsc.utoronto.ca
 
 \section{Conclusion}
 Our objective was to allow for the exploration of census data without
-geographical harmonization, an approach that is usually not considered. Our
-method was able to corroborate previous findings from the specialized
-literature, with an increased level of detail due to our data representation and
-visualization choices. The feedback from experts was remarkably positive, most
-of them were able to extract insight from the prototype and demonstrated
-interest in using it on their research efforts.
-
-While we focused on census data in this work, the proposed method can be used
-with most similarly area-based datasets. Further, while there is interest in the
-use of census data, it is mostly in combination with other, larger and more
-dynamic, datasets. We postulate that, while census data is interesting, the
-amount of effort required to obtain and prepare it often discourages its use as
-complementary information, reinforcing our hypothesis that there is need for
-methods that are able to deal with geographically inconsistent data. 
-
-\emph{"(...) tract-by-tract comparison is not possible unless data from 2000 is
-interpolated to 2010 boundaries (...)"}~\cite{Dmowska2017}
-
+geographical harmonization, an original alternative to a challenging and
+error-prone process. Our method was able to corroborate previous findings from
+the specialized literature, with an increased level of detail due to our data
+representation and visualization choices. The feedback from experts was positive
+and most of them were able to extract insight from the prototype and
+demonstrated interest in using it on their research efforts. Indeed, the experts
+also demonstrated further interest in similar tools, indicating that visual
+analytics methods can be valuable in this field. 
 
 
 
@@ -411,10 +401,10 @@ interpolated to 2010 boundaries (...)"}~\cite{Dmowska2017}
 % use section* for acknowledgment
 \ifCLASSOPTIONcompsoc
   % The Computer Society usually uses the plural form
-  \section*{Acknowledgments}
+  \section*{Acknowledgements}
 \else
   % regular IEEE prefers the singular form
-  \section*{Acknowledgment}
+  \section*{Acknowledgement}
 \fi
 
 
