--- a/paper/discussion.tex
+++ b/paper/discussion.tex
@@ -1,21 +1,28 @@
 \section{Discussion and limitations}
 
-The objective of this work was to leverage a graph based data representation
-with visual tools to allow for the exploration of geographically inconsistent
-census data. While we successfully replicated and corroborated results from the
-literature, this method still has significant limitations. 
+Our objective was to leverage a graph based data representation and
+visualization methods for the exploration of geographically inconsistent
+region-based data. While we successfully replicated and corroborated results
+from the literature, this method still has significant limitations. 
 
 
-Removing the geographical normalization/interpolation step greatly reduces the
-amount of work necessary, but the method still requires consistent variables
-across the years. Matching the fields of the public census can be trivial for
+Removing the need for geographical harmonization greatly reduces the amount of
+work necessary to explore demographic data, but the method still requires
+consistent variables across the years. Matching the variables can be trivial for
 some aspects (Age), but challenging for others (Income). The divulged income
-ranges vary over time, the actual value changes due to inflation and other
-factors, and so on. Moreover, some fields were not considered in earlier
-censuses, such as Race in Canada, or Hispanic population in the USA, hampering
-its use when they are available. Since this is only a prototype, we matched few
-aspects, but a deeper demographic analysis would greatly benefit from all
-available information.
+ranges vary over time and the actual values change due to inflation. Some
+variables were not considered in earlier censuses, such as Race in Canada, or
+Hispanic population in the USA, hampering its use when they are available. Since
+this is only a prototype, we matched few aspects, but a proper demographic
+analysis would benefit from all available information.
+
+
+While using one small map for each year leads to an easier visualization that
+does not require interaction, it does not scale if more than five or six years
+are considered. In this case, it might be interesting to replace the larger map
+considering each year individually, along with a temporal control for
+navigation. Indeed, including more years would likely lead  to a stronger
+mixture of colors in the trajectory map, leading to a predominantly grey hue.
 
 
 The limitation on the number of displayed clusters because of the limited number
@@ -26,6 +33,7 @@ information representation that can be coherently used across different plots,
 so we opted to use it, even if in a limited way. With eight colors, there was
 overlap between some clusters, the relevance gradient, and the color
 combination. 
+
 
 
 Another limitation is the lack of control on how much the geographical
