--- a/sup/sup.tex
+++ b/sup/sup.tex
@@ -365,7 +365,7 @@ updated as you develop it further. I could definitely see a use for it in the
 work I do both in my personal research and at my work at 2M.
 
 
-
+% \end{document}
 
 \clearpage
 \section{Variable matching} 
