--- a/paper/main.tex
+++ b/paper/main.tex
@@ -410,7 +410,7 @@ analytics methods can be valuable in this field.
 
 This research was supported by a University of Toronto Connaught Global
 Challenge grant and is part of the Urban Genome Project. The authors thank Cary
-Wu, Ethan A. Fosse, Fernando Calderón Figueroa, Patrick Adler, and James Murdoch
+Wu, Ethan Fosse, Fernando Calderón Figueroa, Patrick Adler, and James Murdoch
 for their expert opinions; Mark S. Fox, Robert M. Wright, Ultan Byrne, Matti
 Siemiatycki, Shauna Brail, and Richard Florida for general guidance and support;
 and the anonymous reviewers for their constructive comments.
