--- a/sup/sup.tex
+++ b/sup/sup.tex
@@ -154,7 +154,7 @@ survey data visualization. For example, we can develop similar tools to
 visualize the U.S. General Social Survey across different states from 1972-2016.
 
 
-\subsection{B - Ethan A. Fosse}
+\subsection{B - Ethan Fosse}
 % \href{https://scholar.harvard.edu/ethanfosse}{\url{https://scholar.harvard.edu/ethanfosse}}
 \emph{Research Associate at Princeton University, USA}
 
@@ -365,7 +365,7 @@ updated as you develop it further. I could definitely see a use for it in the
 work I do both in my personal research and at my work at 2M.
 
 
-% \end{document}
+\end{document}
 
 \clearpage
 \section{Variable matching} 
